# amp-sim

./: CMakeLists.txt  README.md
src/: main.cpp
src/amp/: Amp.cpp  Amp.h  AmpSettings.cpp  AmpSettings.h
src/settings/: AmpSettings.h
src/ui/: Slider.cpp  Slider.h  UI.cpp  UI.h
